# claude-lite

./: .gitignore  README.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: anthropic.rs  chat.rs  mod.rs  projects.rs
src-tauri/src/db/: mod.rs  models.rs  schema.sql
src/components/: ChatHistory.tsx  ChatView.tsx  MessageInput.tsx  Sidebar.tsx
src/lib/: tauri.ts  types.ts  utils.ts
src/store/: chats.ts  projects.ts
